<resources>
    <string name="app_name">Evin</string>
    <string name="add">添加</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="shouquan_cancel">授权失败</string>
    <string name="images_count">%1$d张</string>
    <string name="images_count_max">最多只能选取%1$d张照片</string>

    <string name="sdcard_unmounted">未发现SD卡,请检查后重试</string>
    <string name="sdcard_no_pics">擦，一张图片没扫描到</string>
    <string name="loading">加载中...</string>
    <string name="loading_load_pics">正在扫描,请稍候...</string>

    <string name="title_choose_img">选择图片</string>
    <string name="title_upload_image">录入图像</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, ut duis lorem provident sed felis blandit, condimentum donec lectus ipsum et mauris, morbi porttitor interdum feugiat nulla donec sodales, vestibulum nisl primis a molestie vestibulum quam, sapien mauris metus risus suspendisse magnis. Augue viverra nulla faucibus egestas eu, a etiam id congue rutrum ante, arcu tincidunt donec quam felis at ornare, iaculis ligula sodales venenatis commodo volutpat neque, suspendisse elit praesent tellus felis mi amet. Inceptos amet tempor lectus lorem est non, ac donec ac libero neque mauris, tellus ante metus eget leo consequat. Scelerisque dolor curabitur pretium blandit ut feugiat, amet lacus pulvinar justo convallis ut, sed natoque ipsum urna posuere nibh eu. Sed at sed vulputate sit orci, facilisis a aliquam tellus quam aliquam, eu aliquam donec at molestie ante, pellentesque mauris lorem ultrices libero faucibus porta, imperdiet adipiscing sit hac diam ut nulla. Lacus enim elit pulvinar donec vehicula dapibus, accumsan purus officia cursus dolor sapien, eu amet dis mauris mi nulla ut. Non accusamus etiam pede non urna tempus, vestibulum aliquam tortor eget pharetra sodales, in vestibulum ut justo orci nulla, lobortis purus sem semper consectetuer magni purus. Dolor a leo vestibulum amet ut sit, arcu ut eaque urna fusce aliquet turpis, sed fermentum sed vestibulum nisl pede, tristique enim lorem posuere in laborum ut. Vestibulum id id justo leo nulla, magna lobortis ullamcorper et dignissim pellentesque, duis suspendisse quis id lorem ante. Vivamus a nullam ante adipiscing amet, mi vel consectetuer nunc aenean pede quisque, eget rhoncus dis porttitor habitant nunc vivamus, duis cubilia blandit non donec justo dictumst, praesent vitae nulla nam pulvinar urna. Adipiscing adipiscing justo urna pulvinar imperdiet nullam, vitae fusce rhoncus proin nonummy suscipit, ullamcorper amet et non potenti platea ultrices, mauris nullam sapien nunc justo vel, eu semper pellentesque arcu fusce augue. Malesuada mauris nibh sit a a scelerisque, velit sem lectus tellus convallis consectetuer, ultricies auctor a ante eros amet sed.\n\n
Risus lacus duis leo platea wisi, felis maecenas rutrum in id in donec, non id a potenti libero eget, posuere elit ea sed pellentesque quis. Sunt lacus urna lorem elit duis, nibh donec purus quisque consectetuer dolor, neque vestibulum proin ornare eros nonummy phasellus. Iaculis cras eu at egestas dolor montes, viverra quisque malesuada consectetuer semper maecenas, a sed vitae donec tempor aliqua metus, ornare mollis suscipit et erat fusce, sit orci aut auctor elementum fames aliquam. Platea dui integer magnis non metus, minus dignissimos ante massa nostra et, rutrum sapien egestas quis sapien donec donec. Erat sit a eros aenean natoque, quam libero id lorem enim proin, lorem ipsum fermentum mattis metus et. Aliquam aliquet suscipit purus conubia at neque, platea vivamus vestibulum nulla quibusdam senectus, et morbi lectus malesuada gravida donec, elementum sit convallis pellentesque velit amet. Et eveniet viverra vehicula consectetuer justo, provident sed commodo non lacinia velit, tempor phasellus vel leo nisl cras, vivamus et arcu interdum dui eu amet. Volutpat wisi rhoncus vel turpis diam quibusdam, dapibus elit est quisque cubilia mauris, nulla elit magna tempor accumsan bibendum, lorem varius sed interdum eget mattis, scelerisque egestas feugiat donec dui molestie. Leo facilisis nisl sit montes ligula sed, enim commodo consectetuer nunc est et, ut sed vehicula dolor luctus elit. Fermentum cras donec eget nibh est vel, sed justo risus et pharetra diam, eu vivamus egestas ligula risus diam, sed justo eget hac ut mauris. Vestibulum diam nec vitae mi eget suspendisse, aenean arcu purus facilisis purus class in, id aliquam sit id scelerisque sapien etiam. Ut nullam sit sed at mauris lobortis, consequat dolor autem ipsum euismod nulla, elit quis proin eget conubia varius, erat arcu massa mus in mauris, scelerisque ut eu sollicitudin libero leo urna.\n\n
Consectetuer luctus tempor elit ut dolor ligula, quis dui per dui hendrerit ante sagittis, in quisque pretium in eleifend enim. Condimentum iaculis vitae feugiat dis tellus vel, lectus dolor nec dui nulla nascetur, et pellentesque curabitur lorem leo velit eget. Id nascetur arcu lobortis suspendisse imperdiet urna, natoque nascetur ante in porta a, interdum hendrerit mi bibendum platea tellus, urna in enim ornare vestibulum faucibus enim. Leo fusce egestas ante nec volutpat, in tempor vel facilisis potenti ut, pede at non lorem a commodo, nulla dolor orci interdum vestibulum nulla. Dui nulla vestibulum quisque a pharetra porta, integer nec ipsum nec sed dui pharetra, magna et dignissim ipsum sed dictum, litora eros vivamus scelerisque libero ipsum. Sed ac ac lorem molestie adipiscing morbi, pellentesque imperdiet nunc quis morbi amet ante, libero dui ligula nec risus neque et, velit nonummy phasellus et facilisi amet, ligula in elementum non sapien pulvinar faucibus. Eu leo ut posuere sed aliquet, tincidunt vel urna volutpat tempus sem, sit felis aliquet vestibulum condimentum sit, amet nibh vel tellus purus ullamcorper libero, nulla vestibulum pede ut vestibulum pretium. Eu nulla vestibulum a neque in metus, quisquam nam sed cursus eget luctus, pede ultrices nec sed dignissim pellentesque, sit class cursus metus nulla placerat mauris, consequat mollis neque vivamus amet pede. Mauris dolor nulla diam eros bibendum, quam ante vestibulum morbi non ligula vel, molestie curabitur rhoncus nulla euismod interdum non. Nulla fringilla lorem mollis ad massa, sit molestie nibh lorem arcu volutpat, accumsan commodo lectus eu et donec, sit tempor tempus rutrum in curabitur amet. Nec urna euismod a tincidunt commodo, eu pede turpis libero vitae viverra, ante vestibulum nam non habitasse potenti, mauris imperdiet in in nunc convallis. Et nostra wisi in est accumsan vehicula, quisque vitae felis mauris sed vulputate nec, ante imperdiet sollicitudin massa iaculis massa sit.\n\n
Quam libero nulla netus eu porta curae, ut nulla bibendum facilisis et urna sed, quis congue vestibulum aliquam interdum etiam. Nulla vel lobortis ullamcorper vitae excepturi, neque urna feugiat lectus vel lacinia, massa pretium orci eu metus neque vulputate. Imperdiet ac velit rhoncus nulla malesuada nullam, nec pulvinar justo gravida lorem rutrum magna, habitasse repudiandae mi eros vestibulum ante, nec euismod dui iaculis in turpis pretium, ac id metus egestas proin lacus lectus. Laoreet lorem nec vitae risus erat arcu, vitae quam ut in ante tristique, porta dolor pede quam et odio nam, arcu lacus sem congue ante cursus massa. Et mattis sagittis erat accumsan fusce quam, vehicula ligula beatae natoque fusce sodales conubia, habitasse metus cum magnis viverra nam cursus, egestas urna wisi primis blandit eu magna, eget libero elit lacus lorem dis aliquam. Ut mauris ante natoque lacus massa, justo a lectus sodales enim adipiscing id, accumsan ut ipsum vestibulum sed enim auctor, vitae congue tincidunt id phasellus lacinia scelerisque, tincidunt sapien nulla euismod volutpat iaculis. Platea sociis nec aliquet nec molestie, in mi et augue sapien in vivamus, integer fames proin vitae in ullamcorper et. Fringilla etiam sapiente rhoncus suspendisse nec id, lobortis cras eget egestas dui ac nec, justo lacus ut lorem bibendum quia eros, eget a gravida id donec nunc suscipit, porta sed in sodales non rutrum. Lectus vel dui elementum pellentesque magna aliquam, vitae non sit pede et fusce nibh, id id deserunt ornare dui sit condimentum, in adipiscing imperdiet turpis nam aliquet, facilisis metus magna lacus wisi facilisis tortor. Vulputate elit accumsan quam amet ligula, suspendisse lacus mi nonummy integer urna, libero nulla nunc varius in odio, laoreet nulla amet placerat amet nec. Consectetuer vel massa hendrerit vitae iaculis id, sed ut ut laudantium odio in, elit vestibulum duis ante maecenas interdum in, neque vehicula ultrices varius in quam, pede tellus pellentesque sed nullam quis.</string>


    <string name="title_renwu">人物</string>
    <string name="title_shijian">事件</string>
    <string name="title_zhengzhi">政治</string>
    <string name="title_jingji">经济</string>
    <string name="title_wenzhang">文章</string>

    <string name="amaya_marker_rename">修改名称</string>
    <string name="amaya_address_empty">新地址不能为空</string>

    <string name="error_network_search">搜索失败,请检查网络连接！</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试！</string>
    <string name="amaya_poi_search_street">街道</string>
    <string name="amaya_poi_search_hotal">酒店</string>
    <string name="amaya_poi_search_eat">餐饮</string>
    <string name="amaya_poi_search_place">景区</string>
    <string name="amaya_poi_search_movie">影院</string>
    <string name="amaya_title_map_maker">选择位置</string>
    <string name="amaya_poi_search_nogps">无法获得当前位置.请稍后再试</string>
    <string name="amaya_marker_add">新建地址(最多8位汉子)</string>
    <string name="amaya_marker_default">无位置信息.默认显示(当前位置)</string>
    <string name="amaya_marker_default_wly">无位置信息.默认显示(张家界武陵源)</string>
    <string name="amaya_address_default">张家界</string>
    <string name="refresh">刷新</string>
    <string name="gps_loading_desc">正在获取地理位置&#046;&#046;&#046;</string>
    <string name="amaya_net_error">网络未连接</string>
    <string name="amaya_gps_hide_true">隐藏位置</string>
    <string name="amaya_gps_finding">正在获取地址...</string>
    <string name="topic_item_hint">照片描述(可选)</string>
    <string name="amaya_gps_hint">位置描述(可选)</string>
    <string name="pic_empty_tip_topic">描述内容不能为空</string>
    <string name="amaya_gps_hide_false">点击选择附近地点</string>
    <string name="amaya_add_topic_photo">添加图片</string>
    <string name="pic_choose_full_tip">图片已满8张,请删除后重新选择&#046;&#046;&#046;</string>
    <string name="title_import_image">录入图片</string>
    <string name="title_import_event">录入事件</string>
    <string name="title_import_user">录入人物</string>

    <string name="animate">Animate</string>
    <string name="stop_animation">\u25A0</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="left_arrow">\u2190</string>
    <string name="up_arrow">\u2191</string>
    <string name="down_arrow">\u2193</string>
    <string name="right_arrow">\u2192</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="type_label">类型</string>
    <string name="entrance_1">图像</string>
    <string name="entrance_2">事件</string>
    <string name="entrance_3">人物</string>
    <string name="event_name">事件名称</string>
    <string name="event_type">事件类型</string>
    <string name="event_content">事件内容</string>
    <string name="event_position">事件地点</string>
    <string name="choose_time">选择时间</string>
    <string name="choose_time_start_tip">选择开始时间</string>
    <string name="choose_time_end_tip">选择结束时间</string>
    <string name="choose_time_start">开始于:%1$s</string>
    <string name="choose_time_end">结束于:%1$s</string>
</resources>
