<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/entrance_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/entrance_1"
        android:textColor="#12a8ff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/entrance_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/entrance_2"
        android:textColor="#12a8ff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/entrance_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/entrance_3"
        android:textColor="#12a8ff"
        android:textSize="50sp"
        android:textStyle="bold" />

</LinearLayout>
